--- a/src/app/Futudata/components/futuform/futuform.component.html
+++ b/src/app/Futudata/components/futuform/futuform.component.html
@@ -1,3 +1,4 @@
+<div class=" container grid grid-cols-4 gap-4">
 <div class="absolute inset-x-0 top-0 h-16">
 
 <div class="bg-#DCD7C9 w-full min-h-screen gap-4 flex-center flex justify-center items-center">
@@ -50,4 +51,5 @@
     </div>
         <!-- Card -->
 
+</div>
 </div>
